# OS_labs_3_sem

./: README.md
lw2/: README.md  child1.c  child2.c  main.c
lw4/: README.md  child1.c  child2.c  main.c
lw5/: CMakeLists.txt  lib.h  lib1.c  lib2.c  main1.c  main2.c  prog1.c  prog2.c
